@@ -1,3 +1,8 @@
+Wed Feb 26 16:45:39 CET 2003 Daniel Veillard <daniel@veillard.com>
+
+	* entities.c: fixes again one of the problem raised by
+	  James Clark in #106788
+
 Wed Feb 26 15:46:48 CET 2003 Daniel Veillard <daniel@veillard.com>
 
 	* relaxng.c: Fixed a couple of problem raised by James Clark
